# apex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PUBLISHING.md  README.md  TODO.md  apex.example.toml  apex.reference.toml  apex.toml  apex.toml.example  flake.nix  install.sh  smithery.yaml
.cargo/: config.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: apex-captain.md  apex-coverage-analyst.md  apex-crew-exploration.md  apex-crew-foundation.md  apex-crew-intelligence.md  apex-crew-platform.md  apex-crew-runtime.md  apex-crew-security.md  apex-runner.md
.claude/commands/: apex-gaps.md  apex-generate.md  apex-run.md  apex.md
.claude/hooks/: hooks.json  notification-logger.sh  officer-dispatch.sh  ownership-check.sh  ralph-hook.sh  session-cleanup.sh  task-notification-logger.sh  tool-usage-logger.sh
.claude/scripts/: gh-api.sh  hygiene-score.sh
.config/: nextest.toml
.fleet/: bridge.yaml  federation.yaml  ralph-session.local  tool-usage.jsonl
.fleet/changes/: 2026-03-14-architect-workspace-deps.md  2026-03-14-integrator-unwired-detectors.md  2026-03-14-performance-regex-z3.md  2026-03-14-qa-test-gaps.md  2026-03-14-security-officer-shm-concolic.md
.fleet/crews/: mcp-integration.yaml
.fleet/federation/outbox/: 2026-03-19-preflight-check-crew-protocol.md
.fleet/officers/: dispatcher.yaml  integrator.yaml
.fleet/plans/: 2026-03-16-fleet-review-bugfix.md  2026-03-16-full-fleet-review.md  2026-03-16-release-readiness-v020.md  2026-03-16-self-analysis-fixes.md  2026-03-16-worktree-agent-hygiene.md  2026-03-17-mcp-server-v030.md  2026-03-17-test-harness.md  2026-03-18-bun-first-js.md  2026-03-18-config-wiring.md  2026-03-18-mise-kover.md  2026-03-18-preflight-introspection.md  2026-03-18-uv-toolchain-modernization.md  2026-03-18-xmake-ruby-mise.md  2026-03-19-failsafe-lockfree-detectors.md  2026-03-20-agentic-instrumentation.md  2026-03-20-cpg-taint-integration.md  2026-03-20-default-full-run.md  2026-03-20-detector-implementation.md  2026-03-20-detector-parity.md  2026-03-20-llvm-unification.md  2026-03-20-self-analysis-actions.md  2026-03-21-coverage-modes-strategy.md  2026-03-21-research-round3-detectors.md  2026-03-21-toolchain-management.md  2026-03-21-v040-plan.md  2026-03-23-auto-detection-config.md  2026-03-23-high-findings-triage.md  2026-03-23-research-implementation.md  fleet-worktree-hygiene-issue.md
.github/workflows/: ci.yml
HomebrewFormula/: apex.rb
agents/: README.md  install.sh
agents/agents/: apex-coverage-analyst.md  apex-test-writer.md
agents/commands/: apex-ci.md  apex-gaps.md  apex-generate.md  apex-status.md
crates/apex-agent/: Cargo.toml
crates/apex-agent/src/: bandit.rs  budget.rs  cache.rs  classifier.rs  driller.rs  ensemble.rs  exchange.rs  feedback.rs  history.rs  ledger.rs  lib.rs  monitor.rs  mutation_guide.rs  orchestrator.rs  priority.rs  rotation.rs  source.rs  test_harness.rs
crates/apex-cli/: Cargo.toml
crates/apex-cli/src/: agent_dispatch.rs  ci_report.rs  doctor.rs  fuzz.rs  integrate.rs  lib.rs  main.rs  mcp.rs  toolchain.rs  wrap.rs
crates/apex-concolic/: Cargo.toml
crates/apex-concolic/python/apex_symbolic/: __init__.py  engine.py  inference.py  proxy.py
crates/apex-concolic/python/tests/: test_engine.py  test_inference.py  test_proxy.py
crates/apex-concolic/src/: condition_tree.rs  js_conditions.rs  lib.rs  python.rs  search.rs  static_strategy.rs  taint.rs
crates/apex-concolic/src/scripts/: apex_tracer.py
crates/apex-core/: Cargo.toml
crates/apex-core/src/: command.rs  (+12 more)
crates/apex-coverage/: Cargo.toml
crates/apex-cpg/: Cargo.toml
crates/apex-detect/: Cargo.toml
crates/apex-fuzz/: Cargo.toml
crates/apex-index/: Cargo.toml
crates/apex-index/src/: analysis.rs  change_impact.rs  csharp.rs  dead_code.rs  flaky.rs  flaky_repair.rs  go.rs  impact.rs  java.rs  lib.rs  prioritize.rs  python.rs  rust.rs  spec_mining.rs  swift.rs  types.rs
crates/apex-instrument/: Cargo.toml
crates/apex-lang/: Cargo.toml
crates/apex-lang/src/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  js_env.rs  kotlin.rs  lib.rs  probe_impl.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  wasm.rs
crates/apex-mir/: Cargo.toml
crates/apex-mir/src/: cfg.rs  extract.rs  lib.rs
crates/apex-reach/: Cargo.toml
crates/apex-reach/src/: dynamic.rs  engine.rs  graph.rs  lib.rs
crates/apex-reach/src/extractors/: c_cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs
crates/apex-rpc/: Cargo.toml  build.rs
crates/apex-rpc/proto/: apex.proto
crates/apex-rpc/src/: coordinator.rs  lib.rs  worker.rs
crates/apex-sandbox/: Cargo.toml
crates/apex-sandbox/src/: bitmap.rs  firecracker.rs  javascript.rs  lib.rs  macos_sandbox.rs  process.rs  python.rs  rust_test.rs  sancov_rt.rs  seccomp.rs  shim.rs  shm.rs
crates/apex-symbolic/: Cargo.toml
crates/apex-symbolic/proptest-regressions/: smtlib.txt
crates/apex-symbolic/src/: bitwuzla_solver.rs  bmc.rs  cache.rs  diversity.rs  gradient.rs  landscape.rs  lib.rs  llm_solver.rs  path_decomp.rs  portfolio.rs  smtlib.rs  solver.rs  summaries.rs  traits.rs
crates/apex-synth/: Cargo.toml
docs/: INSPIRATION.md  LITERATURE_SURVEY_2024_2026.md  RESEARCH_PAPERS_2024_2026.md  STANDALONE.md  apex-v031-self-analysis.md  sancov-self-instrumentation-research.md  suppressed-warnings-registry.md
docs/assets/: apex-validation-presentation.html
docs/plans/: real-world-validation.md
docs/research/: 2026-03-20-coverage-without-recompilation.md  2026-03-21-coverage-modes-strategy.md  2026-03-24-installation-methods.md  RESEARCH_INTEGRATION_PLAN.md  coverage-tool-architecture-survey.md  external-methodologies-report.md  llm-test-generation-papers-2024-2026.md
integrations/a2a/: agent-card.json
integrations/mcp-registries/: mcp-registry.json  mcp-run.json  server.json  smithery.yaml
npm/: install.js  package.json
python/: pyproject.toml
python/apex_cli/: __init__.py
scripts/: fleet-preflight.sh  test-summary.sh
tests/: TESTING_STRATEGY.md
(+283 files in other folders)
