[package]
name = "apex-concolic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Concolic execution engine for APEX"

[features]
# Enable real pyo3 concolic extension module.
pyo3-tracer = ["pyo3"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-coverage = { path = "../apex-coverage" }
apex-symbolic = { path = "../apex-symbolic" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
regex-lite = "0.1"

# Feature-gated: only with --features pyo3-tracer
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
