[package]
name = "apex-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Process and microVM sandbox execution for APEX"

[features]
firecracker = ["hyper", "hyper-util", "http-body-util", "tokio-vsock"]

[dependencies]
apex-core = { path = "../apex-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
nix = { version = "0.27", features = ["process", "resource", "signal"] }
libc = "0.2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
apex-coverage = { path = "../apex-coverage" }
apex-instrument = { path = "../apex-instrument" }
hyper = { version = "1", features = ["http1", "client"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
tokio-vsock = { version = "0.5", optional = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
serial_test = "3"
