[package]
name = "apex-symbolic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Symbolic constraint solving for APEX (SMT-LIB2, Z3, Kani)"

[features]
# Enable real Z3 integration. Requires z3 or z3-sys system library.
z3-solver = ["z3"]
# Enable Kani bounded model-checking prover integration.
kani-prover = []

[dependencies]
apex-core = { path = "../apex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"

# Feature-gated: only enabled with --features z3-solver
z3 = { version = "0.12", features = ["static-link-z3"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
